src/main/java/com/example/incidentplatform/common/error/ConflictException.java
package com.example.incidentplatform.common.error;

public class ConflictException extends RuntimeException {
    public ConflictException(String message) {
        super(message);
    }
}
